url drop-down wrongly aligned in firebird. Patch by mconnor@rogers.com. b=172530 r=dean sr=bryner